spring-boot-vuejs/backend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spring-boot-vuejs
  annotations:
    kubernetes.io/ingress.class: nginx
    # Dont use the below line. This will replace all subpaths with "/"
    #    nginx.ingress.kubernetes.io/rewrite-target: /

    # Using the below line will replace the second string after "greetings"
    # so you should access /greetings/greetings/readmessage for the endpoint to work
    # So just dont use any rewrites
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80

  rules:
    - host: spring-boot-vuejs
    - http:
        paths:
          - path: /api/.*
            backend:
              serviceName: spring-boot-vuejs
              servicePort: 8080
